--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   rel="stylesheet"
   href="https://fonts.googleapis.com/icon?family=Material+Icons"
 />
+  <!-- <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-p0lK1zvQXbP/oZf+nQnQdZ+Z4K68R3yZ4Z3Z1F2cCkmU0QX6F2VwU3bmHtOr5nZqz79cGz9iE9O/6zWJp2R9nA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  /> -->
+
   </head>
   <body>
     <div id="root"></div>
